--- a/css/style.css
+++ b/css/style.css
@@ -18,13 +18,13 @@ body {
 }
 
 .showcase-left h1 {
-    font-size: 60px;
+    font-size: 55px;
     font-weight: bold;
     font-family: Poppins, sans-serif;
 }
 
 .showcase-right h3 {
-    font-size: 30px;
+    font-size: 27px;
     font-family: Poppins;
     color: #777777;
 }
@@ -143,7 +143,15 @@ footer {
 
 @media(max-width: 892px) {
     .showcase-left h1 {
-        font-size: 47px;
+        font-size: 37px;
+    }
+
+    .showcase-right h3 {
+        font-size: 22px;
+    }
+
+    #about-info p {
+        font-size: 22px;
     }
 }
 
@@ -156,16 +164,8 @@ footer {
 
 
 @media(max-width: 410px) {
-    .showcase-left h1 {
-        font-size: 37px;
-    }
-
-    .showcase-right h3 {
-        font-size: 24px;
-    }
-
     #about-info p {
-        font-size: 24px;
+        font-size: 20px;
     }
 
     h2 {
